Contrast fix

--- a/content/themes/handbook/sass/base/_prism-theme.scss
+++ b/content/themes/handbook/sass/base/_prism-theme.scss
@@ -11,7 +11,7 @@ $code-colors: (
 	purple: #d73a49,
 	maroon: #6f42c1,
 	green: #005cc5,
-	light-gray: #f6f8fa,
+	light-gray: #f0f3f5,
 	dark-gray: #24292e
 );
 
