--- a/content/themes/handbook/sass/base/_prism.scss
+++ b/content/themes/handbook/sass/base/_prism.scss
@@ -167,7 +167,7 @@ pre[class*="language-"] {
 
 // Copy to clipboard
 $radius: 4px;
-$background: #f6f8fa;
+$background: #f0f3f5;
 
 pre[class*="language-"] {
   position: relative;
